Add logic for sending notification by email
- Add Subscriber entity and related repository interface
- Add Sendgrid dependency and NotificationService klass

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,26 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Notification by email -->
+		<dependency>
+			<groupId>com.sendgrid</groupId>
+			<artifactId>sendgrid-java</artifactId>
+			<version>4.9.3</version>
+		</dependency>
+
+		<!-- Dependencies for comprehensive validation support -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.0.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<!-- Build configuration with Spring Boot Maven Plugin -->
